[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/Player/Idle.png" type="Texture" id=2]
[ext_resource path="res://Art/Player/Death1.png" type="Texture" id=4]
[ext_resource path="res://Art/Player/Death2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": true,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 6.69549 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
position = Vector2( 0, -16 )
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 7.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RightWallDetect" type="RayCast2D" parent="."]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="LeftWallDectect" type="RayCast2D" parent="."]
position = Vector2( -16, 0 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="EnemyDetector" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.8, 0.164706, 0.819608, 1 )
position = Vector2( 0, -0.117981 )
shape = SubResource( 3 )

[node name="StompDetector" type="Area2D" parent="." groups=[
"Player",
]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, 16 )
shape = SubResource( 4 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
